--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 </script>
 <nav>
 	<ul>
-		<li><a href=#Home>Home</a></li>
-		<li><a href=#About>About</a></li>
-		<li><a href=#Contact>Contact</a></li>
+		<li><a href=https://chat.openai.com/>Home</a></li>
+		<li><a href=https://www.youtube.com/>About</a></li>
+		<li><a href=https://web.telegram.org/>Contact</a></li>
 	</ul>
 </nav>
 	<section>
@@ -28,7 +28,6 @@
 		<audio controls>
 			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
 		</audio>
-		
 	</section>
 </body>
 
